# Agentic_Human_Guided_Fine_Tuning_Dataset_Generator

./: .gitignore  PROJECT_PROPOSAL.md  README.md  Synthetic_Data_Genration.code-workspace  WorkerServiceArchitecture.md  docker-compose.yml  project-start-commands.txt  pyproject.toml  requirements-worker.txt  test_system.ps1
Luman-Logo-Assets/: README.txt
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.tsx  index.css
notebooks/: chonkie_experiments.ipynb  test_scripts.py
notes/: HIERARCHICAL_CHUNKING_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  SETUP_GUIDE.md
src/: database.py  main.py
src/data_models/: BeanieModels.py  DataModels.py
src/routers/: FileMangerRouter.py  (+1 more)
web_api/: README.md  database.py  errors.py  main.py  pyproject.toml
web_api/data_models/: BasicBeanieModels.py  BeanieModels.py  CredentialModels.py  DataModels.py  ExtractedDataModels.py  ExtractedModels.py  ModelConfigModels.py  UserModels.py  enums.py
web_api/routers/: CredentialRouter.py  FileMangerRouter.py  InternalRouter.py  ModelConfigRouter.py  ProcessingRouter.py  ProjectMangerRouter.py  UserRouter.py  WebhookRouter.py
web_api/services/: AuthService.py  EmailService.py  FileHandlerService.py  JWTService.py  MinioService.py  ModelConfigService.py  ProjectHandlerService.py  ProjectMembersHandlerService.py  SecurityService.py  UserService.py  credential_service.py  encryption_service.py  llm_factory.py
workers/: README.md  __init__.py  celery_app.py  config.py  enums.py  models.py  pyproject.toml
workers/chunkers/: __init__.py  base.py  factory.py  llama_index_chunker.py
workers/services/: bm25_service.py  chapter_detector.py  chunking_service.py  chunking_service_academic.py  chunking_service_fiction.py  contextualizer.py  embedding_service.py  extracted_storage_service.py  file_fetcher.py  pdf_to_markdown.py  storage_service.py  text_extractor.py  vision_service.py
workers/tasks/: academic_processor.py  fiction_processor.py  orchestrator.py
workers/utils/: temp_file_manager.py  webhook_notifier.py
(+11 files in other folders)
