[project]
name = "synthetic-data-genration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch ",
    "marker-pdf",
    "streamlit",
    "streamlit-ace",
    "chonkie[code]",
    "fastapi[standard]",
    "motor>=3.3.0",
    "pymongo",
    "beanie",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pymupdf>=1.23.0",
    "llama-index-core>=0.10.0",
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.7",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "google-generativeai>=0.8.6",
    "pillow>=10.4.0",
]
