[project]
name = "web-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "argon2-cffi>=25.1.0",
    "beanie>=2.1.0",
    "celery[redis]>=5.3.0",
    "chonkie[code]>=1.6.8",
    "cohere>=7.0.4",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.136.3",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "langgraph>=1.2.5",
    "minio>=7.2.20",
    "motor>=3.3.0",
    "openai>=2.41.1",
    "passlib>=1.7.4",
    "pydantic>=2.0.0",
    "pymongo>=4.17.0",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "resend>=2.30.1",
    "tiktoken>=0.13.0",
]
