[project]
name = "workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3.0",
    "chonkie[code]>=1.6.8",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "llama-index-core>=0.10.0",
    "marker-pdf[full]>=1.10.2",
    "motor>=3.3.0",
    "openai>=1.109.1",
    "pillow>=10.4.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
    "python-json-logger>=4.1.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
]
